dgx-quick/ssd/20211122/gpu=full_5gpu_x_2pod/run20211122_20211122_151931_948591/stderr
Traceback (most recent call last):
  File "/home/kevin/openshift/matrix_benchmark/exec/mlperf/run_ssd.py", line 18, in <module>
    import query_thanos
  File "/home/kevin/openshift/matrix_benchmark/exec/mlperf/query_thanos.py", line 119
    pod_name = get_validation_podname(),
    ^
SyntaxError: invalid syntax
